syntax = "proto3";

option java_package = "com.roytuts.google.proto.buffer.java.model";
option java_outer_classname = "EmployeeProto";

message Employee {
	int32 id = 1;
  	string name = 2;  
	string email = 3;

  	enum PhoneType {
    	MOBILE = 0;
    	HOME = 1;
    	WORK = 2;
  	}
	
	message PhoneNumber {
		string number = 1;
	    PhoneType type = 2;
	}
	
	repeated PhoneNumber phones = 4;
	
	enum AddressType {
    	PERMANENT = 0;
    	COMMUNICATION = 1;
  	}
  	
  	message Address {
		string street = 1;
		string city = 2;
		int32 zip = 3;
		string state = 4;
		string country = 5;
	    AddressType type = 6;
	}
	
	repeated Address address = 5;
}

message Organization {
  repeated Employee employee = 1;
}